@@ -35,10 +35,9 @@
 
 void son(const char *childname, char *script_file, int truncate_stderr_out);
 int sge_set_environment(void);
-char** sge_get_environment(void);
+char **sge_get_environment(void);
 int sge_set_env_value(const char *, const char *);
 const char *sge_get_env_value(const char *);
 void start_command(const char *, char *, char *, char *, char *, int, int, int, int, char *, int);
-int check_configured_method(const char *method, const char *name, char *err_str);
 
 #endif /* __BUILTIN_STARTER_H */
